<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="210dp"
            android:background="@drawable/seu"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f0f0f0"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp" >      
                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_"
                    android:textSize="15dp" 
                    android:textColor="#00fff0"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16dp" />

            </LinearLayout>
            
            
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp" >      
                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="ID号："
                    android:textSize="15dp" 
                    android:textColor="#00fff0"/>

                <EditText
                    android:id="@+id/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="right" >

                <TextView
                    android:id="@+id/TextViewage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/age"
                    android:textSize="15dp" 
                    android:textColor="#00fff0"/>

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16dp" />
"
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp" >

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="电话:"
                    android:textColor="#00fff0" />

                <EditText
                    android:id="@+id/myphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="37dp" >

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="地址:" 
                    android:textColor="#00fff0"/>

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.70" >
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/gallery"
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/imagebutton_background"
                    android:drawableTop="@drawable/picture"
                    android:text="@string/gallery"
                    android:textColor="#ffffffff" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/camera"
                        android:layout_width="58dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/imagebutton_background"
                        android:drawableTop="@drawable/camera"
                        android:text="@string/camera"
                        android:textColor="#ffffffff" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                </LinearLayout>

                <Button
                    android:id="@+id/remote_register"
                    android:layout_width="62dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/imagebutton_background"
                    android:drawableTop="@drawable/internet"
                    android:text="@string/remote_register"
                    android:textColor="#ffffffff" />
            </LinearLayout>

            <Button
                android:id="@+id/writedb"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:background="@drawable/imagebutton_background"
                android:drawableTop="@drawable/local"
                android:text="@string/localrigister"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/databasecheck"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:background="@drawable/imagebutton_background"
                android:drawableTop="@drawable/search"
                android:text="@string/checkedb"
                android:textColor="#ffffffff" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="病情简介："
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/decrpiton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.38"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@drawable/imagebutton_background"
        android:drawableTop="@drawable/myback"
        android:text="返回"
        android:textColor="#ffffff" />

</LinearLayout>